--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Welcome</title>
+    <title>Krishna Weds Riya</title>
     
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
@@ -74,7 +74,7 @@
 </head>
 <body>
     <div class="home-container">
-        <h2>Welcome!</h2>
+        <h2>For My Love ❤️</h2>
 
         <div class="ring-container">
             <img src="assets/ring.png" alt="Spinning Ring" id="ring" />
