--- a/home.html
+++ b/home.html
@@ -85,7 +85,7 @@
             Your browser does not support the audio element.
         </audio>
 
-        <video controls autoplay loop>
+        <video controls>
             <source src="assets/her_video.mp4" type="video/mp4">
             Your browser does not support the video element.
         </video>
